add more styles in page

--- a/app/index.html
+++ b/app/index.html
@@ -22,6 +22,17 @@
         </nav>
 
     </header>
+
+    <section class="box-interface">
+        <div class="box-shadowning">
+            <img src="/assets/barber-4618697_1280.jpg" width="400" alt="">
+        </div>
+        <aside>
+            <h1>GH Barber Club</h1>
+
+            <p class="box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate provident eligendi, adipisci aliquid nesciunt maxime omnis minima incidunt? Expedita nostrum repellat magnam saepe consequuntur. Repudiandae ea eius consequatur ipsa consequuntur!</p>
+        </aside>
+    </section>
 </body>
 
 </html>
