--- a/app/index.html
+++ b/app/index.html
@@ -33,6 +33,35 @@
             <p class="box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate provident eligendi, adipisci aliquid nesciunt maxime omnis minima incidunt? Expedita nostrum repellat magnam saepe consequuntur. Repudiandae ea eius consequatur ipsa consequuntur!</p>
         </aside>
     </section>
+
+    <section class="options">
+        <div class="cortes">
+            <div class="imgsCortes">
+                <div class="image1">
+                    <img src="/assets/cabeleireiro-masculino-cortando-o-cabelo-de-clientes-masculinos-no-salao-de-barbeiro_153608-5386.avif" width="200px" alt="">
+                    <aside>
+                        <h1>Corte e Sobrancelha</h1>
+                        <button class="agendar">Agendar</button>
+                    </aside>
+                </div>
+                <div class="image2">
+                    <img src="/assets/cliente-hipster-cortando-o-cabelo-maos-de-barbeiro-com-maquina-de-cortar-cabelo-close-up-homem-barbudo-na-barbearia-conceito-de-corte-de-cabelo-homem-visitando-cabeleireiro-na-b.avif" width="200px" alt="">
+                    <aside>
+                        <h1>Degradê</h1>
+                        <button class="agendar">Agendar</button>
+                    </aside>
+
+                </div>
+                <div class="image3">
+                    <img src="/assets/o-processo-de-corte-de-cabelo-masculino-em-uma-barbearia-estilosa_199683-145.avif" width="200px" alt="">
+                    <aside>
+                        <h1>Corte Social</h1>
+                        <button class="agendar">Agendar</button>
+                    </aside>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
